--- a/index.html
+++ b/index.html
@@ -9,7 +9,21 @@
 </head>
 <body>
   <div id="app">
-    <h1 class="text-center">{{ appname }}</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h1>{{ appname }}</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-4">
+          <h4>Create</h4>
+        </div>
+        <div class="col-8">
+          <h4>All tasks</h4>
+        </div>
+      </div>
+    </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
