--- a/index.html
+++ b/index.html
@@ -17,10 +17,25 @@
       </div>
       <div class="row">
         <div class="col-4">
-          <h4>Create</h4>
+          <h4>Create Task</h4>
+          <form>
+            <div class="form-group" >
+                <label for="title">Title</label>
+                <input type="text" id="title" class="form-control">
+            </div>
+           <div class="form-group">
+              <label for="descriptions">Descriptions</label>
+              <textarea name="descriptions" class="form-control" id="descriptions" cols="30" rows="4"></textarea>
+           </div>
+          </form>
         </div>
         <div class="col-8">
           <h4>All tasks</h4>
+          <div class="task-list">
+            <div class="task-list--item">List 1</div>
+            <div class="task-list--item">List 1</div>
+            <div class="task-list--item">List 1</div>
+          </div>
         </div>
       </div>
     </div>
