--- a/index.html
+++ b/index.html
@@ -18,23 +18,22 @@
       <div class="row">
         <div class="col-4">
           <h4>Create Task</h4>
-          <form>
+          <form v-on:submit="createTask">
             <div class="form-group" >
                 <label for="title">Title</label>
-                <input type="text" id="title" class="form-control">
+                <input type="text" id="title" name="title" class="form-control">
             </div>
            <div class="form-group">
               <label for="descriptions">Descriptions</label>
               <textarea name="descriptions" class="form-control" id="descriptions" cols="30" rows="4"></textarea>
            </div>
+           <button type="submit" class="btn btn-primary">Create</button>
           </form>
         </div>
         <div class="col-8">
           <h4>All tasks</h4>
           <div class="task-list">
-            <div class="task-list--item">List 1</div>
-            <div class="task-list--item">List 1</div>
-            <div class="task-list--item">List 1</div>
+            <div class="task-list--item" v-for="item in list">{{item.title}}</div>
           </div>
         </div>
       </div>
@@ -42,6 +41,7 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
